@@ -59,7 +59,7 @@ Game_window::Game_window
 	    main_actor(0), monster_info(0),
 	    conv_choices(0), texts(0), num_faces(0), last_face_shown(-1),
 	    open_gumps(0),
-	    main_actor_inside(0), skip_above_actor(31), mode(splash), npcs(0),
+	    skip_above_actor(31), mode(splash), npcs(0),
 	    shapes(), dragging(0), dragging_save(0),
 	    faces(FACES_VGA), gumps(GUMPS_VGA), fonts(FONTS_VGA),
 	    sprites(SPRITES_VGA), mainshp(MAINSHP_FLX),
@@ -797,7 +797,6 @@ int Game_window::read
 	clear_world();			// Wipe clean.
 	if (!read_gwin())		// Read our data.
 		return (0);
-	main_actor_inside = 0;
 	end_gump_mode();		// Kill gumps, and paint new data.
 	read_npcs();			// Read in NPC's, monsters.
 	if (!usecode->read())		// Usecode.dat (party, global flags).
@@ -1038,18 +1037,7 @@ void Game_window::paint_chunk_objects
 	Game_object *obj;
 	Chunk_object_list *olist = get_objects(cx, cy);
 	int save_skip = skip_lift;	// ++++Clean this stuff up.
-#if 1	/* ++++++Old way */
-					// If inside, figure height above
-	if (main_actor_inside)		//   actor's head.
-		{
-		skip_lift = main_actor->get_lift() + 
-		  shapes.get_info(main_actor->get_shapenum()).get_3d_height();
-					// Round up to nearest 5.
-		skip_lift = ((skip_lift + 4)/5)*5;
-		}
-#else	/* ++++++++New way */
 	skip_lift = skip_above_actor;
-#endif
 					// +++++Clear flag.
 	for (obj = olist->get_first(); obj; obj = olist->get_next(obj))
 		obj->rendered = 0;
@@ -1351,10 +1339,15 @@ cout << "Clicked at tile (" << get_scrolltx() + x/tilesize << ", " <<
 	int actor_lift = main_actor->get_lift();
 	int start = actor_lift > 0 ? -1 : 0;
 	int not_above = skip_lift;
+#if 0	/* ++++Old way */
 					// If inside, figure height above
 	if (main_actor_inside)		//   actor's head.
 		not_above = main_actor->get_lift() + 
 		  shapes.get_info(main_actor->get_shapenum()).get_3d_height();
+#else
+	if (skip_above_actor < not_above)
+		not_above = skip_above_actor;
+#endif
 					// See what was clicked on.
 	for (int lift = start + actor_lift; lift < not_above; lift++)
 		cnt += find_objects(lift, x, y, &found[cnt]);
