@@ -81,7 +81,6 @@ private:
 	Xform_palette xforms[11];	// Transforms translucent colors
 					//   0xf4 through 0xfe.
 	Main_actor *main_actor;		// Main sprite to move around.
-	unsigned char main_actor_inside;// 1 if actor is in a building.
 	int skip_above_actor;		// Level above actor to skip rendering.
 	int num_npcs, num_npcs1;	// Numbers of NPC's, type1 NPC's.
 	Actor **npcs;			// List of NPC's + the Avatar.
@@ -165,23 +164,13 @@ public:
 	Actor *get_main_actor()
 		{ return main_actor; }
 	int set_above_main_actor(int inside, int lift)
-		{			// Use ht=3, round up to nearest 5.
-		int new_skip = !inside ? 31 : ((lift + 3 + 4)/5)*5;
+		{			// Use ht=4, round up to nearest 5.
+		int new_skip = !inside ? 31 : ((lift + 4 + 4)/5)*5;
 		return (new_skip == skip_above_actor ? 0
 				: ((skip_above_actor = new_skip), 1));
 		}
-	int check_main_actor_inside()	// See if main actor moved in/out-side.
-		{
-		if (main_actor_inside != get_objects(main_actor->get_cx(),
-					main_actor->get_cy())->is_roof())
-			{
-			main_actor_inside = !main_actor_inside;
-			return 1;
-			}
-		return 0;
-		}
 	int is_main_actor_inside()
-		{ return main_actor_inside; }
+		{ return skip_above_actor < 31 ; }
 	Actor *get_npc(long npc_num)
 		{ return (npc_num >= 0 && npc_num < num_npcs) ? npcs[npc_num] 
 									: 0; }
